@@ -96,12 +96,14 @@ export(probe_colo_plot)
 export(probe_colo_plot_list)
 export(probe_list)
 export(read_term_list)
+export(rename_tags)
 export(search_term)
 export(search_term_collocations)
 export(search_term_which)
 export(source_term_list)
 export(split_data)
 export(tag_co_occurrence)
+export(tag_cols)
 export(term_after)
 export(term_before)
 export(term_cols)
@@ -114,7 +116,6 @@ export(token_count)
 export(uncovered)
 export(unnest_source_term_list)
 export(unnest_term_list)
-export(update_names)
 export(validate_model)
 export(weight)
 export(write_term_list)
