@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/DEPRECATED_ngram_collocations.R
+% Please edit documentation in R/DEPRECATED.R
 \name{ngram_collocations}
 \alias{ngram_collocations}
 \title{Ngram Collocations}
