@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/update_names.R
-\name{update_names}
-\alias{update_names}
+\name{rename_tags}
+\alias{rename_tags}
 \title{Rename a term_count Object's Term Columns}
 \usage{
-update_names(x, old, new)
+rename_tags(x, old, new)
 }
 \arguments{
 \item{x}{A \code{term_count} object.}
@@ -17,7 +17,7 @@ update_names(x, old, new)
 Returns a renamed \code{term_count} object.
 }
 \description{
-Safely rename a \code{term_count} object's term columns and attributes.
+Safely rename a \code{term_count} object's tag columns and attributes.
 }
 \examples{
 data(presidential_debates_2012)
@@ -34,8 +34,8 @@ discoure_markers <- list(
 ))
 
 
-update_names(markers, old = c('back_channels', 'summons'), new = c('bcs', 's'))
-update_names(markers, old = c('person'), new = c('people'))
-update_names(markers, old = c('person', 'back_channels', 'summons'), new = c('people', 'bcs', 's'))
-attributes(update_names(markers, old = c('back_channels', 'summons'), new = c('bcs', 's')))
+rename_tags(markers, old = c('back_channels', 'summons'), new = c('bcs', 's'))
+rename_tags(markers, old = c('person'), new = c('people'))
+rename_tags(markers, old = c('person', 'back_channels', 'summons'), new = c('people', 'bcs', 's'))
+attributes(rename_tags(markers, old = c('back_channels', 'summons'), new = c('bcs', 's')))
 }
