@@ -1,11 +1,14 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/term_cols.R
+% Please edit documentation in R/DEPRECATED.R, R/tag_cols.R
 \name{term_cols}
 \alias{term_cols}
+\alias{tag_cols}
 \alias{group_cols}
-\title{Get Term/Group Columns}
+\title{Get Tag/Group Columns}
 \usage{
 term_cols(x, ...)
+
+tag_cols(x, ...)
 
 group_cols(x, ...)
 }
@@ -18,10 +21,10 @@ group_cols(x, ...)
 Returns a \code{tibble} frame of just terms or grouping variables.
 }
 \description{
-Convenience functions to grab just the term or grouping variable columns from
+Convenience functions to grab just the tag or grouping variable columns from
 a \code{term_count} object.
 }
 \examples{
-term_cols(markers)
+tag_cols(markers)
 group_cols(markers)
 }
